--- a/src/main/resources/application.mysql.properties
+++ b/src/main/resources/application.mysql.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/carservicesystem?autoReconnect=true&amp;autoReconnectForPools=true&useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost/carsystem?autoReconnect=true&amp;autoReconnectForPools=true&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 
